implemented get_actions().

--- a/test_air_cargo.ipynb
+++ b/test_air_cargo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -11,20 +11,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..\n",
+      "F.FF\n",
+      "======================================================================\n",
+      "FAIL: test_AC_actions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.007s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 72, in test_AC_actions\n",
+      "    self.assertEqual(len(self.p1.actions(self.p1.initial)), 4)\n",
+      "AssertionError: 0 != 4\n",
       "\n",
-      "OK\n"
+      "======================================================================\n",
+      "FAIL: test_AC_result (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 76, in test_AC_result\n",
+      "    self.assertTrue(expr('In(C1, P1)') in fs.pos)\n",
+      "AssertionError: False is not true\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_h_ignore_preconditions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 81, in test_h_ignore_preconditions\n",
+      "    self.assertEqual(self.p1.h_ignore_preconditions(n),2)\n",
+      "AssertionError: 0 != 2\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.032s\n",
+      "\n",
+      "FAILED (failures=3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=3>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,10 +58,11 @@
     "from importlib import reload\n",
     "import tests.test_my_air_cargo_problems\n",
     "reload(tests.test_my_air_cargo_problems)\n",
-    "#import logging\n",
-    "#logging.basicConfig(level=logging.DEBUG, filename='test_air_cargo.log', filemode='w')\n",
+    "import logging\n",
+    "FORMAT = '%(asctime)-15s %(levelname)-8s %(message)s'\n",
+    "logging.basicConfig(format=FORMAT, level=logging.DEBUG, filename='test_air_cargo.log', filemode='w+')\n",
     "\n",
-    "ts = tests.test_my_air_cargo_problems.TestAirCargoProb1()\n",
+    "ts = tests.test_my_air_cargo_problems.TestAirCargoMethods()\n",
     "suite = TestLoader().loadTestsFromModule(ts)\n",
     "TextTestRunner().run(suite)"
    ]
@@ -53,7 +78,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "FFFF..EEEE\n",
+      "F.FF..EEEE\n",
       "======================================================================\n",
       "ERROR: test_ACP2_num_fluents (tests.test_my_air_cargo_problems.TestAirCargoProb2)\n",
       "----------------------------------------------------------------------\n",
@@ -95,14 +120,6 @@
       "AssertionError: 0 != 4\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_AC_get_actions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 65, in test_AC_get_actions\n",
-      "    self.assertEqual(len(self.p1.actions_list), 20)\n",
-      "AssertionError: 4 != 20\n",
-      "\n",
-      "======================================================================\n",
       "FAIL: test_AC_result (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
@@ -119,15 +136,15 @@
       "AssertionError: 0 != 2\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 10 tests in 0.028s\n",
+      "Ran 10 tests in 0.047s\n",
       "\n",
-      "FAILED (failures=4, errors=4)\n"
+      "FAILED (failures=3, errors=4)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=10 errors=4 failures=4>"
+       "<unittest.runner.TextTestResult run=10 errors=4 failures=3>"
       ]
      },
      "execution_count": 1,
