--- a/test_air_cargo.ipynb
+++ b/test_air_cargo.ipynb
@@ -11,14 +11,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..FF\n",
+      "..EF\n",
       "======================================================================\n",
-      "FAIL: test_AC_result (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
+      "ERROR: test_AC_result (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 76, in test_AC_result\n",
-      "    self.assertTrue(expr('In(C1, P1)') in fs.pos)\n",
-      "AssertionError: False is not true\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 75, in test_AC_result\n",
+      "    fs = decode_state(self.p1.result(self.p1.initial, self.act1), self.p1.state_map)\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/my_air_cargo_problems.py\", line 161, in result\n",
+      "    if action.str() in [a.str() for a in possible_actions]:\n",
+      "AttributeError: 'Action' object has no attribute 'str'\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_h_ignore_preconditions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
@@ -29,15 +31,15 @@
       "AssertionError: 0 != 2\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.032s\n",
+      "Ran 4 tests in 0.034s\n",
       "\n",
-      "FAILED (failures=2)\n"
+      "FAILED (failures=1, errors=1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=4 errors=0 failures=2>"
+       "<unittest.runner.TextTestResult run=4 errors=1 failures=1>"
       ]
      },
      "execution_count": 1,
