--- a/test_air_cargo.ipynb
+++ b/test_air_cargo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -11,38 +11,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..EF\n",
-      "======================================================================\n",
-      "ERROR: test_AC_result (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 75, in test_AC_result\n",
-      "    fs = decode_state(self.p1.result(self.p1.initial, self.act1), self.p1.state_map)\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/my_air_cargo_problems.py\", line 161, in result\n",
-      "    if action.str() in [a.str() for a in possible_actions]:\n",
-      "AttributeError: 'Action' object has no attribute 'str'\n",
+      "...F"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "actions for problem [Load(C2, P2, JFK), Load(C1, P1, SFO), Fly(P2, JFK, SFO), Fly(P1, SFO, JFK)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
       "======================================================================\n",
       "FAIL: test_h_ignore_preconditions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 81, in test_h_ignore_preconditions\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 82, in test_h_ignore_preconditions\n",
       "    self.assertEqual(self.p1.h_ignore_preconditions(n),2)\n",
       "AssertionError: 0 != 2\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.034s\n",
+      "Ran 4 tests in 0.046s\n",
       "\n",
-      "FAILED (failures=1, errors=1)\n"
+      "FAILED (failures=1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=4 errors=1 failures=1>"
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=1>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "F.FF..EEEE\n",
+      "...F..EEEE\n",
       "======================================================================\n",
       "ERROR: test_ACP2_num_fluents (tests.test_my_air_cargo_problems.TestAirCargoProb2)\n",
       "----------------------------------------------------------------------\n",
@@ -106,22 +111,6 @@
       "AttributeError: 'NoneType' object has no attribute 'goal'\n",
       "\n",
       "======================================================================\n",
-      "FAIL: test_AC_actions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 72, in test_AC_actions\n",
-      "    self.assertEqual(len(self.p1.actions(self.p1.initial)), 4)\n",
-      "AssertionError: 0 != 4\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_AC_result (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 76, in test_AC_result\n",
-      "    self.assertTrue(expr('In(C1, P1)') in fs.pos)\n",
-      "AssertionError: False is not true\n",
-      "\n",
-      "======================================================================\n",
       "FAIL: test_h_ignore_preconditions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
@@ -130,18 +119,18 @@
       "AssertionError: 0 != 2\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 10 tests in 0.047s\n",
+      "Ran 10 tests in 0.065s\n",
       "\n",
-      "FAILED (failures=3, errors=4)\n"
+      "FAILED (failures=1, errors=4)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=10 errors=4 failures=3>"
+       "<unittest.runner.TextTestResult run=10 errors=4 failures=1>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
