implemented air_cargo_p2, air_cargo_p3 functions.

--- a/test_air_cargo.ipynb
+++ b/test_air_cargo.ipynb
@@ -4,39 +4,26 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...F"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "actions for problem [Load(C2, P2, JFK), Load(C1, P1, SFO), Fly(P2, JFK, SFO), Fly(P1, SFO, JFK)]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "...F\n",
       "======================================================================\n",
       "FAIL: test_h_ignore_preconditions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 82, in test_h_ignore_preconditions\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 77, in test_h_ignore_preconditions\n",
       "    self.assertEqual(self.p1.h_ignore_preconditions(n),2)\n",
       "AssertionError: 0 != 2\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.046s\n",
+      "Ran 4 tests in 0.032s\n",
       "\n",
       "FAILED (failures=1)\n"
      ]
@@ -68,79 +55,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...F..EEEE\n",
-      "======================================================================\n",
-      "ERROR: test_ACP2_num_fluents (tests.test_my_air_cargo_problems.TestAirCargoProb2)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 32, in test_ACP2_num_fluents\n",
-      "    self.assertEqual(len(self.p2.initial), 27)\n",
-      "AttributeError: 'NoneType' object has no attribute 'initial'\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_ACP2_num_requirements (tests.test_my_air_cargo_problems.TestAirCargoProb2)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 35, in test_ACP2_num_requirements\n",
-      "    self.assertEqual(len(self.p2.goal),3)\n",
-      "AttributeError: 'NoneType' object has no attribute 'goal'\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_ACP3_num_fluents (tests.test_my_air_cargo_problems.TestAirCargoProb3)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 44, in test_ACP3_num_fluents\n",
-      "    self.assertEqual(len(self.p3.initial), 32)\n",
-      "AttributeError: 'NoneType' object has no attribute 'initial'\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_ACP3_num_requirements (tests.test_my_air_cargo_problems.TestAirCargoProb3)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 47, in test_ACP3_num_requirements\n",
-      "    self.assertEqual(len(self.p3.goal),4)\n",
-      "AttributeError: 'NoneType' object has no attribute 'goal'\n",
-      "\n",
+      "...F....F.\n",
       "======================================================================\n",
       "FAIL: test_h_ignore_preconditions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 81, in test_h_ignore_preconditions\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 77, in test_h_ignore_preconditions\n",
       "    self.assertEqual(self.p1.h_ignore_preconditions(n),2)\n",
       "AssertionError: 0 != 2\n",
       "\n",
+      "======================================================================\n",
+      "FAIL: test_ACP3_num_fluents (tests.test_my_air_cargo_problems.TestAirCargoProb3)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 10 tests in 0.065s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 44, in test_ACP3_num_fluents\n",
+      "    self.assertEqual(len(self.p3.initial), 32)\n",
+      "AssertionError: 27 != 32\n",
       "\n",
-      "FAILED (failures=1, errors=4)\n"
+      "----------------------------------------------------------------------\n",
+      "Ran 10 tests in 0.100s\n",
+      "\n",
+      "FAILED (failures=2)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=10 errors=4 failures=1>"
+       "<unittest.runner.TextTestResult run=10 errors=0 failures=2>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from unittest import *\n",
-    "from importlib import reload\n",
-    "\n",
     "import tests.test_my_air_cargo_problems\n",
-    "reload(tests.test_my_air_cargo_problems)\n",
+    "\n",
     "suite = TestLoader().loadTestsFromModule(tests.test_my_air_cargo_problems)\n",
     "TextTestRunner().run(suite)"
    ]
