implemented the ignore preconditions heuristic in AirCargoProblem.

--- a/test_air_cargo.ipynb
+++ b/test_air_cargo.ipynb
@@ -6,32 +6,25 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...F\n",
-      "======================================================================\n",
-      "FAIL: test_h_ignore_preconditions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
+      ".\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 77, in test_h_ignore_preconditions\n",
-      "    self.assertEqual(self.p1.h_ignore_preconditions(n),2)\n",
-      "AssertionError: 0 != 2\n",
+      "Ran 1 test in 0.078s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.033s\n",
-      "\n",
-      "FAILED (failures=1)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=4 errors=0 failures=1>"
+       "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
       ]
      },
      "execution_count": 1,
@@ -40,6 +33,52 @@
     }
    ],
    "source": [
+    "# run test_h_ignore_preconditions\n",
+    "from unittest import *\n",
+    "import tests.test_my_air_cargo_problems\n",
+    "\n",
+    "import logging\n",
+    "FORMAT = '%(asctime)-15s %(levelname)-8s %(message)s'\n",
+    "logging.basicConfig(format=FORMAT, level=logging.DEBUG, filename='test_air_cargo.log', filemode='w+')\n",
+    "\n",
+    "suite = TestLoader().loadTestsFromName('tests.test_my_air_cargo_problems.TestAirCargoMethods.test_h_ignore_preconditions')\n",
+    "TextTestRunner().run(suite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.103s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# run testCase TestAirCargoMethods\n",
     "from unittest import *\n",
     "from importlib import reload\n",
     "import tests.test_my_air_cargo_problems\n",
@@ -55,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -66,33 +105,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...F......\n",
-      "======================================================================\n",
-      "FAIL: test_h_ignore_preconditions (tests.test_my_air_cargo_problems.TestAirCargoMethods)\n",
+      "..........\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_air_cargo_problems.py\", line 77, in test_h_ignore_preconditions\n",
-      "    self.assertEqual(self.p1.h_ignore_preconditions(n),2)\n",
-      "AssertionError: 0 != 2\n",
+      "Ran 10 tests in 0.180s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 10 tests in 0.121s\n",
-      "\n",
-      "FAILED (failures=1)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=10 errors=0 failures=1>"
+       "<unittest.runner.TextTestResult run=10 errors=0 failures=0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#run test suite test_my_air_cargo_problems\n",
     "from unittest import *\n",
     "import tests.test_my_air_cargo_problems\n",
     "\n",
