implemented add literal and action levels.

--- a/test_planning_graph.ipynb
+++ b/test_planning_graph.ipynb
@@ -2,43 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "use 1\n",
+      "add 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1,2}\n",
+    "b = {1,4}\n",
+    "for i in a:\n",
+    "    for j in b:\n",
+    "        if i == j:\n",
+    "            print(f'use {j}')\n",
+    "            break\n",
+    "    else:\n",
+    "        print(f'add {i}')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: test_add_action_level (tests.test_my_planning_graph.TestPlanningGraphLevels)\n",
+      ".\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 39, in test_add_action_level\n",
-      "    self.assertEqual(len(self.pg.a_levels[1]), 6, len(self.pg.a_levels[1]))\n",
-      "IndexError: list index out of range\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.010s\n",
-      "\n",
-      "FAILED (errors=1)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=1 errors=1 failures=0>"
+       "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
       ]
      },
      "execution_count": 1,
@@ -66,7 +81,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -133,7 +150,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
