--- a/test_planning_graph.ipynb
+++ b/test_planning_graph.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -90,44 +90,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EE\n",
+      "..F\n",
       "======================================================================\n",
-      "ERROR: test_add_action_level (tests.test_my_planning_graph.TestPlanningGraphLevels)\n",
+      "FAIL: test_show (tests.test_my_planning_graph.TestPlanningGraphLevels)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 18, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 24, in test_show\n",
+      "    self.assertEqual(n.__str__(), \"s*~Have(Cake){0 parents 0 children 0 mutex}\")\n",
+      "AssertionError: 's*~Have(Cake){0pr 0ch 0mx}' != 's*~Have(Cake){0 parents 0 children 0 mutex}'\n",
+      "- s*~Have(Cake){0pr 0ch 0mx}\n",
+      "+ s*~Have(Cake){0 parents 0 children 0 mutex}\n",
+      "?                + + ++++  +  ++++++  + +++\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_add_literal_level (tests.test_my_planning_graph.TestPlanningGraphLevels)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 18, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.000s\n",
+      "Ran 3 tests in 0.022s\n",
       "\n",
-      "FAILED (errors=2)\n"
+      "FAILED (failures=1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=2 errors=2 failures=0>"
+       "<unittest.runner.TextTestResult run=3 errors=0 failures=1>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
