implemented mutex conditions.

--- a/test_planning_graph.ipynb
+++ b/test_planning_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -10,24 +10,18 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "use 1\n",
-      "add 2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = {1,2}\n",
-    "b = {1,4}\n",
-    "for i in a:\n",
-    "    for j in b:\n",
-    "        if i == j:\n",
-    "            print(f'use {j}')\n",
-    "            break\n",
-    "    else:\n",
-    "        print(f'add {i}')"
+    "False == False"
    ]
   },
   {
@@ -45,7 +39,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
+      "Ran 1 test in 0.007s\n",
       "\n",
       "OK\n"
      ]
@@ -73,7 +67,7 @@
     "logging.basicConfig(format=FORMAT, level=logging.DEBUG, filename='test_planning_graph.log', filemode='w+')\n",
     "\n",
     "test = TestLoader().loadTestsFromName('tests.test_my_planning_graph.'+\n",
-    "                                      'TestPlanningGraphLevels.test_add_action_level') \n",
+    "                                      'TestPlanningGraphMutex.test_interference_mutex') \n",
     "TextTestRunner().run(test)"
    ]
   },
@@ -90,21 +84,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "..F\n",
+      "...F..\n",
       "======================================================================\n",
-      "FAIL: test_show (tests.test_my_planning_graph.TestPlanningGraphLevels)\n",
+      "FAIL: test_interference_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 24, in test_show\n",
-      "    self.assertEqual(n.__str__(), \"s*~Have(Cake){0 parents 0 children 0 mutex}\")\n",
-      "AssertionError: 's*~Have(Cake){0pr 0ch 0mx}' != 's*~Have(Cake){0 parents 0 children 0 mutex}'\n",
-      "- s*~Have(Cake){0pr 0ch 0mx}\n",
-      "+ s*~Have(Cake){0 parents 0 children 0 mutex}\n",
-      "?                + + ++++  +  ++++++  + +++\n",
-      "\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 91, in test_interference_mutex\n",
+      "    \"Precondition from one node opposite of effect of other node should be mutex\")\n",
+      "AssertionError: False is not true : Precondition from one node opposite of effect of other node should be mutex\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.022s\n",
+      "Ran 6 tests in 0.042s\n",
       "\n",
       "FAILED (failures=1)\n"
      ]
@@ -112,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=3 errors=0 failures=1>"
+       "<unittest.runner.TextTestResult run=6 errors=0 failures=1>"
       ]
      },
      "execution_count": 2,
@@ -129,16 +119,16 @@
     "FORMAT = '%(asctime)-15s %(levelname)-8s %(message)s'\n",
     "logging.basicConfig(format=FORMAT, level=logging.DEBUG, filename='test_planning_graph.log', filemode='w+')\n",
     "\n",
-    "ts = tests.test_my_planning_graph.TestPlanningGraphLevels()\n",
+    "ts = tests.test_my_planning_graph.TestPlanningGraphMutex()\n",
     "suite = TestLoader().loadTestsFromModule(ts)\n",
     "TextTestRunner().run(suite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -147,128 +137,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EEEEEEEEE\n",
+      "F....FFF..\n",
       "======================================================================\n",
-      "ERROR: test_levelsum (tests.test_my_planning_graph.TestPlanningGraphHeuristics)\n",
+      "FAIL: test_levelsum (tests.test_my_planning_graph.TestPlanningGraphHeuristics)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 121, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 138, in test_levelsum\n",
+      "    self.assertEqual(self.pg.h_levelsum(), 1)\n",
+      "AssertionError: 0 != 1\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_add_action_level (tests.test_my_planning_graph.TestPlanningGraphLevels)\n",
+      "FAIL: test_inconsistent_effects_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 18, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 85, in test_inconsistent_effects_mutex\n",
+      "    \"Canceling effects not marked as mutex\")\n",
+      "AssertionError: False is not true : Canceling effects not marked as mutex\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_add_literal_level (tests.test_my_planning_graph.TestPlanningGraphLevels)\n",
+      "FAIL: test_inconsistent_support_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 18, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 115, in test_inconsistent_support_mutex\n",
+      "    \"Mutex parent actions should result in inconsistent-support mutex\")\n",
+      "AssertionError: False is not true : Mutex parent actions should result in inconsistent-support mutex\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_competing_needs_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
+      "FAIL: test_interference_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 39, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_inconsistent_effects_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 39, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_inconsistent_support_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 39, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_interference_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 39, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_negation_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 39, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_serialize_mutex (tests.test_my_planning_graph.TestPlanningGraphMutex)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\tests\\test_my_planning_graph.py\", line 39, in setUp\n",
-      "    self.pg = PlanningGraph(self.p, self.p.initial)\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 224, in __init__\n",
-      "    self.create_graph()\n",
-      "  File \"C:\\usr\\prj\\sl\\aind-planning\\my_planning_graph.py\", line 288, in create_graph\n",
-      "    self.update_a_mutex(self.a_levels[level])\n",
-      "IndexError: list index out of range\n",
+      "  File \"/home/sl/Desktop/learn/AI/AIND/proj/aind-planning/tests/test_my_planning_graph.py\", line 91, in test_interference_mutex\n",
+      "    \"Precondition from one node opposite of effect of other node should be mutex\")\n",
+      "AssertionError: False is not true : Precondition from one node opposite of effect of other node should be mutex\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 9 tests in 0.035s\n",
+      "Ran 10 tests in 0.090s\n",
       "\n",
-      "FAILED (errors=9)\n"
+      "FAILED (failures=4)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=9 errors=9 failures=0>"
+       "<unittest.runner.TextTestResult run=10 errors=0 failures=4>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
